--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="PongGame.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PongGame"
+        xmlns:local ="clr-namespace:PongGame"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded" SizeChanged="Window_SizeChanged">
     <Grid x:Name="grid">
-        <local:Display x:Name="display"/>
+        <local:Display x:Name="Display"/>
 
     </Grid>
 </Window>
